--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ title:            Onur's Blog
 tagline:          '#MIS gibi bir öğrencinin not defterinden.'
 description:      '<a href="http://https://tr.wikipedia.org/wiki/Yönetim_Bilişim_Sistemleri" target="_blank">#MIS</a> gibi bir öğrencinin not defterinden.'
 url:              https://onuryarar.github.io/
+disqus.shortname:   onuryarar.
 baseurl:          # the optional subpath of your site, e.g. "/blog"
                   # NB: This applies to all pages in your Jekyll site.
                   # If you want to move just the blog index pages but keep
