wrong link correction

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ highlighter:      rouge
 # Setup
 title:            Onur's Blog
 tagline:          '#MIS gibi bir öğrencinin not defterinden.'
-description:      '<a href="http://https://tr.wikipedia.org/wiki/Yönetim_Bilişim_Sistemleri" target="_blank">#MIS</a> gibi bir öğrencinin not defterinden.'
+description:      '<a href="https://tr.wikipedia.org/wiki/Yönetim_Bilişim_Sistemleri" target="_blank">#MIS</a> gibi bir öğrencinin not defterinden.'
 url:              https://onuryarar.github.io/
 disqus:
   shortname: onuryarar
